# simple-molecule-renderer

./: .gitignore  CMakeLists.txt  LICENSE  LIGHTING_GUIDE.md  README.md  ToonShading  caffeine.xyz  main.cpp  main.cpp.old
asset/: benzene.xyz  ps.xyz  y6_dimer.xyz  zukxov02_P1_H.xyz
old/: Callback.hpp  Element.hpp  Util.hpp
shader/: outline.vert  toon.frag
src/: CMakeCache.txt  Element.hpp  Makefile  Model.hpp  Molecule.hpp  Settings.hpp  ShapeGenerator.hpp  ToonShading  Xyz.hpp  cmake_install.cmake  main.cpp
src/shaders/: outline.frag  outline.vert  toon.frag  toon.vert
